# coding-tools-mcp

./: .dockerignore  .gitignore  AGENTS.md  BENCHMARK.md  CLAUDE.md  COMPLIANCE.md  Makefile  README.en.md  README.md  SECURITY.md  SPEC.md  dev-desktop.cmd  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.github/: dependabot.yml
old/: CITATION.cff  Dockerfile  NOTICE  README.md  SECURITY.md  docker-compose.actions.yml  pyproject.toml
old/.devcontainer/: devcontainer.json
old/apps/desktop-client/: README.md
old/apps/desktop-client/mcp_desktop_client/: actions_runtime.py  app.py  models.py  runtime.py  storage.py
old/benchmarks/dogfood/: __init__.py
old/benchmarks/swebench/predictions/: baseline_native.jsonl  candidate_mcp.jsonl
old/benchmarks/swebench/subsets/: smoke-lite-10.json
old/coding_tools_actions/: __init__.py  app.py  auth.py  mcp_client.py  openapi_builder.py  policies.py
old/docs/: exec-command-recipes.md  gpt-actions.md  security-boundary.md
old/reports/benchmark/: swebench-official-attempt.json  swebench-official-attempt.md
old/tests/: test_actions_openapi.py  test_actions_policy.py  test_actions_routes.py
old/tests/compliance/: outside-secret.txt  test_dogfood_runner.py  test_support.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs
src-tauri/src/actions/: auth.rs  bearer.rs  listener.rs  mod.rs  openapi.rs
src-tauri/src/auth/: bearer.rs  mod.rs  oauth.rs  oauth_flow.rs
src-tauri/src/commands/: frp_profiles.rs  health.rs  logs.rs  mod.rs  runtime.rs  secrets.rs  software.rs  tunnel.rs  workspace.rs
src-tauri/src/data/: migrate.rs  mod.rs  model.rs  store.rs
src-tauri/src/harness/: mod.rs  model.rs  state.rs  store.rs  tools.rs
src-tauri/src/health/: checker.rs  mod.rs
src-tauri/src/mcp/: listener.rs  mod.rs  server.rs
src-tauri/src/platform/: mod.rs  open.rs  paths.rs
src-tauri/src/platform/linux/: mod.rs  net.rs  paths.rs  process.rs
src-tauri/src/platform/macos/: mod.rs  net.rs  paths.rs  process.rs
src-tauri/src/platform/windows/: mod.rs  net.rs  paths.rs  process.rs
src-tauri/src/runtime/: mod.rs  port.rs  supervisor.rs
src-tauri/src/secret/: keyring_store.rs  mod.rs
src-tauri/src/settings/: mod.rs  model.rs  store.rs
src-tauri/src/tools/: context.rs  dispatch.rs  exec.rs  file.rs  git.rs  image_tool.rs  mod.rs  patch.rs  policy.rs  registry.rs  session.rs  workspace.rs
src-tauri/src/tools/history/: markdown.rs  mod.rs  model.rs  storage.rs
src-tauri/src/tunnel/: access.rs  cloudflare.rs  download.rs  mod.rs  software.rs  supervisor.rs
src-tauri/src/tunnel/frp/: client.rs  mod.rs
src-tauri/src/workspace/: legacy_import.rs  mod.rs  model.rs  resources.rs  store.rs
src-tauri/tests/: call_tool_contract.rs  call_tool_security.rs  harness_state.rs  harness_tool_contract.rs  history_session.rs
src-tauri/tests/common/: mod.rs
(+201 files in other folders)
