[build-system]
requires = ["setuptools>=68,<77"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-tools-mcp"
version = "0.1.7"
description = "Workspace-confined coding tools exposed as an MCP server."
requires-python = ">=3.11"
dependencies = [
  "PyJWT>=2.8",
]
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Coding Tools MCP Contributors" }]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/xyTom/coding-tools-mcp"
Documentation = "https://github.com/xyTom/coding-tools-mcp/tree/main/docs"
Source = "https://github.com/xyTom/coding-tools-mcp"
Issues = "https://github.com/xyTom/coding-tools-mcp/issues"

[project.optional-dependencies]
dev = [
  "mypy>=2.1,<2.2",
  "pytest>=8,<9",
  "ruff>=0.15,<0.16",
  "httpx>=0.27,<1",
  "typing_extensions>=4.12",
]
actions = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]
desktop = [
  "PySide6>=6.8,<6.9",
  "psutil>=7.0,<8",
]
image = [
  "Pillow>=10.0",
]

[project.scripts]
coding-tools-mcp = "coding_tools_mcp.server:main"
coding-tools-actions = "coding_tools_actions.app:main"

[tool.setuptools.packages.find]
include = ["coding_tools_mcp*", "coding_tools_actions*"]
