[package]
name = "coding-tools-mcp-desktop"
version = "0.1.20"
description = "Coding Tools MCP desktop client"
authors = ["Coding Tools MCP Contributors"]
edition = "2021"

[lib]
name = "coding_tools_mcp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "process", "io-util", "fs", "time"] }
axum = { version = "0.8", features = ["form"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
walkdir = "2"
regex = "1"
glob = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
jsonwebtoken = "9"
sha2 = "0.10"
shlex = "1"
shell-words = "1"
which = "7"
zip = "2"
flate2 = "1"
tar = "0.4"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
